objects/Contact_Address__c.object
<CustomObject>
    <fields>
        <fullName>APARTMENT__c</fullName>
        <label>Apartment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Match_Key_Hash__c</fullName>
        <label>Account_Match_Key_Hash</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Match_Key__c</fullName>
        <label>Account Match Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Match_Key_Hash__c</fullName>
        <label>Address_Match_Key_Hash</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Match_Key__c</fullName>
        <label>Address Match Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_for_display__c</fullName>
        <formula>Address_1__c  + BR() + 
Address_2__c  + BR() + 
CITY__c  + &quot;, &quot; + 
State__c  + &quot; &quot; + 
Zip__c  + BR() + 
Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Address_1__c</fullName>
        <label>Cleansed Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Address_2__c</fullName>
        <label>Cleansed Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_CITY__c</fullName>
        <label>Cleansed City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Company_Name__c</fullName>
        <label>Cleansed Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Country__c</fullName>
        <label>Cleansed Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Day_Phone__c</fullName>
        <label>Cleansed Day Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Email__c</fullName>
        <label>Cleansed Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_First_Name__c</fullName>
        <label>Cleansed First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Last_Name__c</fullName>
        <label>Cleansed Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Result_Codes__c</fullName>
        <description>the result codes returned from Melissa from a request to cleanse the address</description>
        <inlineHelpText>http://wiki.melissadata.com/index.php?title=Result_Codes</inlineHelpText>
        <label>Cleansed Result Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_State__c</fullName>
        <label>Cleansed State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Zip__c</fullName>
        <label>Cleansed Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address_Match_Key__c</fullName>
        <label>Contact Address Match Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Match_Key_Hash__c</fullName>
        <label>Contact_Match_Key_Hash</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Match_Key__c</fullName>
        <label>Contact Match Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Addresses</relationshipLabel>
        <relationshipName>Contact_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Phone__c</fullName>
        <label>Day Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c + &quot; &quot; +  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Bill_To_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Ship_To_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ship To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Night_Phone__c</fullName>
        <label>Night Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Auto_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Auto Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_CCLU_Searchable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is CCLU Searchable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Searchable__c</fullName>
        <formula>is_Sold_To_Address__c &amp;&amp;  !Is_Inactive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Searchable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Sold_To_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold To</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{0000000000}</displayFormat>
        <label>Contact Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CannotEditLinkedAddresses</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 $Profile.Name != &quot;System Administrator&quot;,
 $Profile.Name != &quot;API Only&quot;,

OR(
 Is_Bill_To_Address__c = TRUE,
 Is_Ship_To_Address__c = TRUE,
 is_Sold_To_Address__c = TRUE),

OR(
   ISCHANGED(  Contact__c ),
   ISCHANGED( Address_1__c ),
   ISCHANGED( Address_2__c ),
   ISCHANGED( Address_3__c ),
   ISCHANGED( Address_4__c ),
   ISCHANGED( APARTMENT__c ), 
   ISCHANGED( CITY__c  ), 
   ISCHANGED( State__c ), 
   ISCHANGED( Zip__c ), 
   ISCHANGED( Country__c ), 
   ISCHANGED( Company_Name__c ), 
   ISCHANGED( Contact__c ), 
   ISCHANGED( First_Name__c ), 
   ISCHANGED( Last_Name__c ), 
   ISCHANGED( Email__c ), 
   ISCHANGED( Day_Phone__c ), 
   ISCHANGED( Night_Phone__c ) 
   )
)</errorConditionFormula>
        <errorMessage>You cannot edit an address that is linked to an order as a Sold To, Bill To, or Ship To. You can only mark such addresses as inactive.</errorMessage>
    </validationRules>
</CustomObject>